[package]
name = "dsplce-co-multi-progressbar"
version = "0.1.0"
edition = "2021"
description = "This is a fork of https://crates.io/crates/multi-progressbar, go to the original repository if you want to use as a dep"
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", optional = true, features = ["derive"] }
crossterm = "0.26.1"

[features]
bin = ["dep:clap"]


[[bin]]
name = "multi-progressbar-demo"
path = "src/bin/multi-progressbar-demo/main.rs"
required-features = ["bin"]
